# lcrypt

./: .gitignore  CMakeLists.txt  Makefile
cmake/: BuildBench.cmake  BuildCatch2.cmake  CPM.cmake  ccache.cmake
src/: CMakeLists.txt  lcrypt.cpp  lcrypt.h
tests/: CMakeLists.txt  bench_main.cpp  test_main.cpp
